--- a/app/src/main/res/layout/recordatorio.xml
+++ b/app/src/main/res/layout/recordatorio.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
@@ -11,7 +11,8 @@
         android:id="@+id/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
+        android:textSize="16sp"
+        android:text="text"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         android:paddingBottom="8dp"/>
@@ -20,7 +21,8 @@
         android:id="@+id/dia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:text="text"
+        android:textSize="12sp"
         android:textColor="@color/white"
         android:paddingBottom="8dp"/>
 
@@ -28,6 +30,7 @@
         android:id="@+id/hora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:text="text"
+        android:textSize="10sp"
         android:textColor="@color/colorPrimaryDark"/>
 </LinearLayout>
